# modite-adventure

./: .ccls  .editorconfig  .gitignore  .travis.yml  Brewfile  Brewfile.lock.json  CMakeLists.txt  Makefile  Makefile-esp32.mk  Makefile-ldk.mk  Makefile-xtensa.mk  README.md  Vagrantfile  common.sh  make-ldk.sh  package.sh  start-modus.sh  tnet.sh
_raw_sprites/pixel_animations_gfxpack/: READ ME.txt
_raw_sprites/rpg-dungeon-pack v1.1(wonderdot)/: examples.tmx  readme.txt
_raw_sprites/rpg-monster-pack v1.0/: background_checkerboard_384x384  background_checkerboard_48x48  make_tiles.sh  readme.txt
_raw_sprites/rpg-monster-pack v1.0 (wonderdot)/: projectile_arrow.txt
_raw_sprites/rpg-overworld-tileset v1.2/: Readme.txt
_raw_sprites/rpg-village-tileset v1.0/: License.txt  Readme.txt
build.ldk/: modus_test.elf  modus_test.ipk
md/: attribution.md
promotion_projects/: DevDungeon_0.pmp  DevDungeon_0_Level_1.pmp  DevDungeon_0_Level_2.pmp  DevDungeon_0_Level_3.pmp  jays_example.pmp
promotion_projects/DevDungeon_0/: Level_1.pmp  Level_2.pmp  Level_3.pmp  Level_4.pmp
promotion_projects/Overworld/: Overworld.pmp
resources/: info.plist
resources/desktop-icon/: Modite-Adventure.icns  ModiteIcon.psd
scripts/: add-key.sh  build-ldk.sh  build-upload.sh  build.sh  code-signing.sh  common.sh  ldk_scripts_common.sh  make-ldk-ci.sh  make-ldk.sh  notarize.sh  package.sh  staple.sh  success.sh  telnet-ldk.sh  test.sh  zipping.sh
scripts/certs/: dist.cer  dist.p12
scripts/profile/: ModiteAdventure.provisionprofile
src/: GButtonWidget.cpp  GButtonWidget.h  GDialogWidget.cpp  GGame.cpp  GGame.h  GResources.h  GSoundPlayer.cpp  GSoundPlayer.h  GSpellOverlayProcess.cpp  GSpellOverlayProcess.h  Game.h  Makefile  Resources.r  TOptions.cpp  TOptions.h  component.mk  main.cpp  resources
src/CreditsState/: GCreditsState.cpp  GCreditsState.h
src/DebugMenuState/: GDebugButtonWidget.cpp  GDebugButtonWidget.h  GDebugMenuContainer.cpp  GDebugMenuContainer.h  GDebugMenuState.cpp  GDebugMenuState.h  GDebugWidget.cpp  GDebugWidget.h  GGiveAllPowerUpsWidget.cpp  GGiveAllPowerUpsWidget.h  GHealthWidget.cpp  GHealthWidget.h  GItemWidget.cpp  GItemWidget.h  GLevelUpPlayer.cpp  GLevelUpPlayer.h  GLevelWidget.cpp  GLevelWidget.h  GManaWidget.cpp  GManaWidget.h
src/GameMenuState/: GExitDungeonWidget.cpp  GExitDungeonWidget.h  GGameMenuContainer.cpp  GGameMenuContainer.h  GGameMenuState.cpp  GGameMenuState.h  GOptionsWidget.cpp  GOptionsWidget.h  GQuitWidget.cpp  GQuitWidget.h  (+4 more)
test/: test.cmake
tools/: Makefile  object_attribute.cpp
travis/: install_deps.sh
(+370 files in other folders)
